--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
         @media screen and (max-width: 768px) {
             #container {
-                width: 100%; /* Full width on mobile */
-                padding: 10px; /* Reduce padding */
+                width: 100%;
+                padding: 10px;
             }
             .profile-spotlight {
                 flex-direction: column;
@@ -151,7 +151,7 @@
                 align-items: center;
             }
             .gallery img {
-                max-width: 100%; /* Full width images */
+                max-width: 100%;
                 margin-bottom: 10px;
             }
         }
@@ -168,9 +168,9 @@
                 <div class="profile-info">
                     <h2>about me ૮ - ﻌ • ა</h2>
                     <p>name: wassim <br>
-                    age: 18 <br>
+                    age: 19 <br>
                 <br>
-                hi! i'm wassim! i am a british/algerian visual artist and filmmaker :DD <br> <br>i make music videos, visualisers, and short films. also an amateur guitar player. here u can find my full portfolio, along with some extra stuff like my socials :3</p>
+                hi! i'm wassim! i am a british/algerian visual artist and filmmaker :D <br> <br>i make music videos, visualisers, and short films. also an amateur guitar player. here u can find my full portfolio, along with some extra stuff like my socials ^-^</p>
                 </div>
             </div>
             <div class="spotlight-section">
@@ -183,12 +183,10 @@
             <div class="social-media">
                 <h2>socials ʚɞ ⁺˖ ⸝⸝</h2>
                 <a href="https://www.youtube.com/@wpssim" target="_blank">youtube</a>
-                <a href="https://bsky.app/profile/zombiesgotoheaven.com" target="_blank">bluesky</a>
                 <a href="https://www.instagram.com/wpssim/" target="_blank">instagram</a>
-                <a href="https://www.tiktok.com/@wpssim" target="_blank">tiktok</a>
-                <a href="https://ko-fi.com/webstargaze" target="_blank">ko-fi</a>
-                <br> <a href="https://tiltify.com/@w4ssim/wassims-project-hope-campaign?origin=dashboard" target="_blank">FUNDRAISING DONATIONS</a>
-                <br> <br>email: wassim@100signs.co
+                <a href="https://x.com/m5isy" target="_blank">twitter</a>
+                <br> <a href="http://artistsagainstgenocide.org/" target="_blank">ARTISTS AGAINST GENOCIDE</a>
+                <br> <br>email: camden@friendlycritter.art
             </div>
             <div class="ascii-art">
                 <p>૮˶• ﻌ •˶ა<br>
