--- a/index.html
+++ b/index.html
@@ -197,18 +197,18 @@
         <div class="section gallery">
             <h2>gallery 𖤐⭒⋆｡⋆⭒𖤐</h2>
             <div class="gallery-images">
-                <img src="images/zombiesgotoheaven.jpg" alt="Zombies Go to Heaven">
-                <img src="images/linoleum.jpg" alt="Linoleum">
+                <img src="images/zombiesgotoheaven.jpg" alt="zombiesgotoheaven">
+                <img src="images/linoleum.jpg" alt="linoleum by kmoe">
                 <img src="images/to see the next part of the dream.jpg" alt="To See the Next Part of the Dream">
             </div>
             <div class="gallery-images">
-                <img src="images/syzy.jpg" alt="Syzy">
-                <img src="images/angelus.jpg" alt="Angelus">
-                <img src="images/gl0wrm.jpg" alt="gl0wrm">
+                <img src="images/syzy.jpg" alt="the weight of the world by syzy">
+                <img src="images/angelus.jpg" alt="xoxo by angelus">
+                <img src="images/gl0wrm.jpg" alt="270 by gl0wrm RIP">
             </div>
             <div class="gallery-images">
-                <img src="images/adam.jpg" alt="adam">
-                <img src="images/tyler.png" alt="tyler">
+                <img src="images/adam.jpg" alt="adam'5">
+                <img src="images/tyler.png" alt="cmiygl by tyler the creator">
                 <img src="images/catgif.jpg" alt="catgif">
             </div>
             <div class="gallery-images">
