--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
         <div class="section gallery">
             <h2>gallery 𖤐⭒⋆｡⋆⭒𖤐</h2>
             <div class="gallery-images">
-                <img src="images/zombiesgotoheaven.jpg" alt="zombiesgotoheaven">
+                <img src="images/to see the next part of the dream.jpg" alt="zombiesgotoheaven">
                 <img src="images/linoleum.jpg" alt="linoleum by kmoe">
-                <img src="images/to see the next part of the dream.jpg" alt="To See the Next Part of the Dream">
+                <img src="images/zombiesgotoheaven.jpg" alt="To See the Next Part of the Dream">
             </div>
             <div class="gallery-images">
                 <img src="images/syzy.jpg" alt="the weight of the world by syzy">
