--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             }
         }
         #container {
-            width: 850px; /* Desktop width */
+            width: 1050px; /* Desktop width */
             background-color: #83a5e0;
             border: 2px solid #000000;
             padding: 20px;
@@ -123,7 +123,7 @@
             margin-top: 20px;
         }
 
-        @media screen and (max-width: 700px) {
+        @media screen and (max-width: 768px) {
             #container {
                 width: 100%;
                 padding: 10px;
@@ -176,7 +176,7 @@
             <div class="spotlight-section">
                 <h2>most recent work :></h2>
                 <p>hey plz go check this out :D</p>
-                <iframe width="100%" height="250" src="https://www.youtube.com/embed/Jpbkw4Jb3UE?si=akCH6s3u45P7wBfE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="100%" height="250" src="https://www.youtube.com/embed/SCnWPXLBtg4?si=OAkqqMlLVymAh8Iw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
         <div class="section social-media-ascii">
@@ -197,8 +197,10 @@
         <div class="section gallery">
             <h2>gallery 𖤐⭒⋆｡⋆⭒𖤐</h2>
             <div class="gallery-images">
+                <img src="images/zombiesgotoheaven.jpg" alt="zombiesgotoheaven">
                 <img src="images/to see the next part of the dream.jpg" alt="zombiesgotoheaven">
                 <img src="images/linoleum.jpg" alt="linoleum by kmoe">
+                <img src="images/to see the next part of the dream.jpg" alt="To See the Next Part of the Dream">
                 <img src="images/zombiesgotoheaven.jpg" alt="To See the Next Part of the Dream">
             </div>
             <div class="gallery-images">
@@ -224,4 +226,3 @@
         </footer>
     </div>
 </body>
-</html>
