--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
         @media screen and (max-width: 768px) {
             #container {
-                width: 100%;
-                padding: 10px;
+                width: 100%; /* Full width on mobile */
+                padding: 10px; /* Reduce padding */
             }
             .profile-spotlight {
                 flex-direction: column;
@@ -151,7 +151,7 @@
                 align-items: center;
             }
             .gallery img {
-                max-width: 100%;
+                max-width: 100%; /* Full width images */
                 margin-bottom: 10px;
             }
         }
@@ -168,24 +168,26 @@
                 <div class="profile-info">
                     <h2>about me ૮ - ﻌ • ა</h2>
                     <p>name: wassim <br>
-                    age: 19 <br>
+                    age: 18 <br>
                 <br>
-                hi! i'm wassim! i am a british/algerian visual artist and filmmaker :D <br> <br>i make music videos, visualisers, and short films. also an amateur guitar player. here u can find my full portfolio, along with some extra stuff like my socials ^-^</p>
+                hi! i'm wassim! i am a british/algerian visual artist and filmmaker :DD <br> <br>i make music videos, visualisers, and short films. also an amateur guitar player. here u can find my full portfolio, along with some extra stuff like my socials :3</p>
                 </div>
             </div>
             <div class="spotlight-section">
                 <h2>most recent work :></h2>
                 <p>hey plz go check this out :D</p>
-                <iframe width="100%" height="250" src="https://www.youtube.com/embed/SCnWPXLBtg4?si=OAkqqMlLVymAh8Iw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="100%" height="250" src="https://www.youtube.com/embed/SCnWPXLBtg4?si=hEX8ziKz9PvbW8f8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
         <div class="section social-media-ascii">
             <div class="social-media">
                 <h2>socials ʚɞ ⁺˖ ⸝⸝</h2>
                 <a href="https://www.youtube.com/@wpssim" target="_blank">youtube</a>
+                <a href="https://x.com/buginsoul" target="_blank">twitter</a>
                 <a href="https://www.instagram.com/wpssim/" target="_blank">instagram</a>
-                <a href="https://x.com/m5isy" target="_blank">twitter</a>
-                <br> <a href="http://artistsagainstgenocide.org/" target="_blank">ARTISTS AGAINST GENOCIDE</a>
+                <a href="https://www.tiktok.com/@buginsoul" target="_blank">tiktok</a>
+                <a href="https://ko-fi.com/webstargaze" target="_blank">ko-fi</a>
+                <br> <a href="http://artistsagainstgenocide.org" target="_blank">FUNDRAISING DONATIONS</a>
                 <br> <br>email: camden@friendlycritter.art
             </div>
             <div class="ascii-art">
@@ -197,20 +199,18 @@
         <div class="section gallery">
             <h2>gallery 𖤐⭒⋆｡⋆⭒𖤐</h2>
             <div class="gallery-images">
-                <img src="images/zombiesgotoheaven.jpg" alt="zombiesgotoheaven">
-                <img src="images/to see the next part of the dream.jpg" alt="zombiesgotoheaven">
-                <img src="images/linoleum.jpg" alt="linoleum by kmoe">
+                <img src="images/zombiesgotoheaven.jpg" alt="Zombies Go to Heaven">
+                <img src="images/linoleum.jpg" alt="Linoleum">
                 <img src="images/to see the next part of the dream.jpg" alt="To See the Next Part of the Dream">
-                <img src="images/zombiesgotoheaven.jpg" alt="To See the Next Part of the Dream">
             </div>
             <div class="gallery-images">
-                <img src="images/syzy.jpg" alt="the weight of the world by syzy">
-                <img src="images/angelus.jpg" alt="xoxo by angelus">
-                <img src="images/gl0wrm.jpg" alt="270 by gl0wrm RIP">
+                <img src="images/syzy.jpg" alt="Syzy">
+                <img src="images/angelus.jpg" alt="Angelus">
+                <img src="images/gl0wrm.jpg" alt="gl0wrm">
             </div>
             <div class="gallery-images">
-                <img src="images/adam.jpg" alt="adam'5">
-                <img src="images/tyler.png" alt="cmiygl by tyler the creator">
+                <img src="images/adam.jpg" alt="adam">
+                <img src="images/tyler.png" alt="tyler">
                 <img src="images/catgif.jpg" alt="catgif">
             </div>
             <div class="gallery-images">
@@ -226,3 +226,4 @@
         </footer>
     </div>
 </body>
+</html>
