--- a/index.html
+++ b/index.html
@@ -218,6 +218,15 @@
                 <img src="images/zjay.jpg" alt="zjay">
                 <img src="images/ray.jpg" alt="ray">
             </div>
+            <div class="gallery-images">
+                <img src="images/lost.jpg" alt="lost and found">
+                <img src="images/cybertrash.png" alt="cybertrash">
+                <img src="images/kmoe.png" alt="kmoe">
+            </div>
+            <div class="gallery-images">
+                <img src="images/post.png" alt="poster girl">
+                <img src="images/hearteater.png" alt="hearteater">
+            </div>
             <br>
             <br>
         </div>
