--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
             <div class="gallery-images">
                 <img src="images/post.png" alt="poster girl">
                 <img src="images/hearteater.png" alt="hearteater">
+                <img src="images/glaive2.png" alt="glaive">
             </div>
             <br>
             <br>
