--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 
         @media screen and (max-width: 768px) {
             #container {
+                height: 40%;
                 width: 100%; /* Full width on mobile */
                 padding: 10px; /* Reduce padding */
             }
