--- a/index.html
+++ b/index.html
@@ -184,10 +184,9 @@
             <div class="social-media">
                 <h2>socials ʚɞ ⁺˖ ⸝⸝</h2>
                 <a href="https://www.youtube.com/@wpssim" target="_blank">youtube</a>
-                <a href="https://x.com/buginsoul" target="_blank">twitter</a>
+                <a href="https://x.com/wpssim" target="_blank">twitter</a>
                 <a href="https://www.instagram.com/wpssim/" target="_blank">instagram</a>
                 <a href="https://www.tiktok.com/@buginsoul" target="_blank">tiktok</a>
-                <a href="https://ko-fi.com/webstargaze" target="_blank">ko-fi</a>
                 <br> <a href="http://artistsagainstgenocide.org" target="_blank">FUNDRAISING DONATIONS</a>
                 <br> <br>email: camden@friendlycritter.art
             </div>
