--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             margin-top: 20px;
         }
 
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 768px) (max-height: 1300px) {
             #container {
                 height: 40%;
                 width: 100%; /* Full width on mobile */
