--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@
         <div class="section gallery">
             <h2>gallery 𖤐⭒⋆｡⋆⭒𖤐</h2>
             <div class="gallery-images">
+                <img src="images/aldn.png" alt="aldn">
+                <img src="images/2muchpressure.png" alt="julia wolf - 2muchpressure">
+                <img src="images/ericdoa.png" alt="ericdoa">
+            </div>
+            <div class="gallery-images">
                 <img src="images/zombiesgotoheaven.jpg" alt="Zombies Go to Heaven">
                 <img src="images/linoleum.jpg" alt="Linoleum">
                 <img src="images/to see the next part of the dream.jpg" alt="To See the Next Part of the Dream">
@@ -228,11 +233,15 @@
                 <img src="images/hearteater.png" alt="hearteater">
                 <img src="images/glaive2.png" alt="glaive">
             </div>
+            <div class="gallery-images">
+                <img src="images/delta.png" alt="delta">
+                <img src="images/megatron.png" alt="megatron">
+            </div>
             <br>
             <br>
         </div>
         <footer>
-            &copy; zombiesgotoheaven
+            &copy; friendlycritter.art
         </footer>
     </div>
 </body>
