--- a/portfolio.html
+++ b/portfolio.html
@@ -7,17 +7,21 @@
     <title>Portfolio</title>
 
     <style>
-        /* ===== Base Layout ===== */
+        html {
+            scroll-behavior: smooth;
+        }
+
         body {
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
+            align-items: flex-start;
+            min-height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
             background-image: url('https://i.pinimg.com/736x/53/c5/99/53c599ec2cbbdb237f3704d18e55d205.jpg');
             background-attachment: fixed;
             background-size: cover;
+            background-position: center;
             opacity: 0;
             animation: fadeIn 0.2s forwards;
         }
@@ -29,13 +33,13 @@
         #container {
             width: 90%;
             max-width: 1040px;
-            height: 1000px;
             background-color: #83a5e0;
             border: 2px solid #000;
             padding: 20px;
             box-sizing: border-box;
-            overflow-y: auto;
+            overflow-y: visible;
             animation: fadeIn 0.3s forwards;
+            margin: 40px 0;
         }
 
         header {
@@ -46,16 +50,12 @@
             font-weight: bold;
             margin-bottom: 20px;
         }
-
-        /* ===== Sections ===== */
         .section {
             border: 1px solid #000;
             padding: 10px;
             margin: 20px 0;
             background-color: #7b9bd2;
         }
-
-        /* ===== Video Containers ===== */
         .video-container {
             display: flex;
             flex-wrap: wrap;
@@ -75,21 +75,25 @@
             aspect-ratio: 16 / 9;
             height: auto;
         }
-
-        /* ===== Instagram Embeds ===== */
         .instagram-media {
             width: 100% !important;
             max-width: 100% !important;
             min-width: 0 !important;
             height: auto !important;
         }
-
-        /* ===== Responsive Design ===== */
         @media screen and (max-width: 768px) {
+            body {
+                align-items: flex-start;
+                padding: 10px 0;
+                background-attachment: scroll;
+            }
+
             #container {
                 width: 100%;
                 height: auto;
                 padding: 10px;
+                margin: 20px 0;
+                border-width: 1px;
             }
 
             .video-container {
@@ -109,14 +113,12 @@
         }
     </style>
 </head>
-
 <body>
     <div id="container">
         <header>
             <h1>PORTFOLIO ✩♬₊˚.</h1>
         </header>
 
-        <!-- ===== Client Work ===== -->
         <div class="section">
             <h2>client work ✦</h2>
 
@@ -131,8 +133,6 @@
                 <iframe src="https://www.youtube.com/embed/videoseries?si=rNZ2EiLL_EuGDZ6w&amp;list=PLHnm1_1RE0IeDbMohA3c0CpAc9wIvd2_9" title="YouTube video player" allowfullscreen></iframe>
                 <iframe src="https://www.youtube.com/embed/14ZFh-SFIrU?si=neIqV4X-_KTbmWjc" title="YouTube video player" allowfullscreen></iframe>
                 <iframe src="https://www.youtube.com/embed/bfNSoRD6IY8?si=2GaUPoWZxdAJNlxs" title="YouTube video player" allowfullscreen></iframe>
-
-                <!-- Instagram Embeds -->
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DA6Uk9DxKVs/?utm_source=ig_embed" data-instgrm-version="14"></blockquote>
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DBHFhiHRYL8/?utm_source=ig_embed" data-instgrm-version="14"></blockquote>
 
@@ -141,7 +141,6 @@
             </div>
         </div>
 
-        <!-- ===== Personal Projects ===== -->
         <div class="section">
             <h2>personal projects ☁︎</h2>
             <div class="video-container">
@@ -151,8 +150,6 @@
                 <iframe src="https://www.youtube.com/embed/Jpbkw4Jb3UE?si=akCH6s3u45P7wBfE" title="YouTube video player" allowfullscreen></iframe>
             </div>
         </div>
-
-        <!-- ===== Practice ===== -->
         <div class="section">
             <h2>practice ♡</h2>
             <div class="video-container">
@@ -166,8 +163,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Instagram Script -->
     <script async src="//www.instagram.com/embed.js"></script>
 </body>
 </html>
