--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
         <h2>socials ʚɞ ⁺˖ ⸝⸝</h2>
         <a href="https://www.youtube.com/@wpssim" target="_blank">youtube</a>
         <a href="https://x.com/wpssim" target="_blank">twitter</a>
-        <a href="https://www.instagram.com/wpssim/" target="_blank">instagram</a>
-        <a href="https://www.tiktok.com/@buginsoul" target="_blank">tiktok</a>
+        <a href="https://www.instagram.com/fishingentity/" target="_blank">instagram</a>
+        <a href="https://www.tiktok.com/@fishingentity" target="_blank">tiktok</a>
         <br><a href="http://artistsagainstgenocide.org" target="_blank">FUNDRAISING DONATIONS</a>
         <br><br>email: camden@friendlycritter.art
       </div>
