--- a/portfolio.html
+++ b/portfolio.html
@@ -1,168 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="images/3336a903610f1b29cd14aa89afc0f9cc.jpg">
-    <title>Portfolio</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/webp" href="images/3336a903610f1b29cd14aa89afc0f9cc.webp">
+<title>Portfolio</title>
 
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
+<link rel="preconnect" href="https://www.youtube.com">
+<link rel="preconnect" href="https://i.ytimg.com">
+<link rel="preconnect" href="https://www.instagram.com">
 
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            min-height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-image: url('https://i.pinimg.com/736x/53/c5/99/53c599ec2cbbdb237f3704d18e55d205.jpg');
-            background-attachment: fixed;
-            background-size: cover;
-            background-position: center;
-            opacity: 0;
-            animation: fadeIn 0.2s forwards;
-        }
+<style>
+html { scroll-behavior: smooth; }
+body {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: 100vh;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-image: url('https://i.pinimg.com/736x/53/c5/99/53c599ec2cbbdb237f3704d18e55d205.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    animation: fadeIn 0.3s forwards;
+}
+@keyframes fadeIn { to { opacity: 1; } }
 
-        @keyframes fadeIn {
-            to { opacity: 1; }
-        }
+#container {
+    width: 90%;
+    max-width: 1040px;
+    background-color: #83a5e0;
+    border: 2px solid #000;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow-y: visible;
+    margin: 40px 0;
+}
 
-        #container {
-            width: 90%;
-            max-width: 1040px;
-            background-color: #83a5e0;
-            border: 2px solid #000;
-            padding: 20px;
-            box-sizing: border-box;
-            overflow-y: visible;
-            animation: fadeIn 0.3s forwards;
-            margin: 40px 0;
-        }
+header {
+    text-align: center;
+    background-color: #7b9bd2;
+    color: #000;
+    padding: 10px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
 
-        header {
-            text-align: center;
-            background-color: #7b9bd2;
-            color: #000;
-            padding: 10px;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-        .section {
-            border: 1px solid #000;
-            padding: 10px;
-            margin: 20px 0;
-            background-color: #7b9bd2;
-        }
-        .video-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: space-between;
-        }
+.section {
+    border: 1px solid #000;
+    padding: 10px;
+    margin: 20px 0;
+    background-color: #7b9bd2;
+}
 
-        .video-container iframe {
-            width: calc((100% - 20px) / 2);
-            aspect-ratio: 16 / 9;
-            height: auto;
-            border: none;
-        }
+.video-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-between;
+}
 
-        .full-width-video iframe {
-            width: 100%;
-            aspect-ratio: 16 / 9;
-            height: auto;
-        }
-        .instagram-media {
-            width: 100% !important;
-            max-width: 100% !important;
-            min-width: 0 !important;
-            height: auto !important;
-        }
-        @media screen and (max-width: 768px) {
-            body {
-                align-items: flex-start;
-                padding: 10px 0;
-                background-attachment: scroll;
-            }
+.video-thumb {
+    position: relative;
+    cursor: pointer;
+    background: #000;
+    flex: 1 1 calc(50% - 20px);
+}
 
-            #container {
-                width: 100%;
-                height: auto;
-                padding: 10px;
-                margin: 20px 0;
-                border-width: 1px;
-            }
+.video-thumb img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
 
-            .video-container {
-                flex-direction: column;
-                gap: 15px;
-            }
+.video-thumb button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    color: #fff;
+    background: rgba(0,0,0,0.5);
+    border: none;
+    border-radius: 50%;
+    padding: 10px 20px;
+    cursor: pointer;
+}
 
-            .video-container iframe,
-            .full-width-video iframe {
-                width: 100%;
-                aspect-ratio: 16 / 9;
-            }
+.full-width-video .video-thumb {
+    flex: 1 1 100%;
+}
 
-            .section {
-                margin: 10px 0;
-            }
-        }
-    </style>
+@media screen and (max-width: 768px) {
+    body { align-items: flex-start; padding: 10px 0; background-attachment: scroll; }
+    #container { width: 100%; height: auto; padding: 10px; margin: 20px 0; border-width: 1px; }
+    .video-container { flex-direction: column; gap: 15px; }
+    .video-thumb { flex: 1 1 100%; }
+    .section { margin: 10px 0; }
+}
+</style>
 </head>
 <body>
-    <div id="container">
-        <header>
-            <h1>PORTFOLIO ✩♬₊˚.</h1>
-        </header>
+<div id="container">
+    <header><h1>PORTFOLIO ✩♬₊˚.</h1></header>
 
-        <div class="section">
-            <h2>client work ✦</h2>
-
-            <div class="video-container full-width-video">
-                <iframe src="https://www.youtube.com/embed/d2ieE_A0sig?si=mvBFOvd0yvLVqKjT" title="YouTube video player" allowfullscreen></iframe>
-            </div>
-
-            <br>
-
-            <div class="video-container">
-                <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DA6Uk9DxKVs/?utm_source=ig_embed" data-instgrm-version="14"></blockquote>
-                <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DBHFhiHRYL8/?utm_source=ig_embed" data-instgrm-version="14"></blockquote>
-                <iframe src="https://www.youtube.com/embed/XeSTwjLBc_k?si=gL3i2yo3iiE88Mxq" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/SCnWPXLBtg4?si=fsLFOYVuz7zdinl1" title="YouTube video player" allowfullscreen></iframe>
-                
-                <iframe src="https://www.youtube.com/embed/cKSayjL4vqY?si=Vg9EdtW21m7ZYx6C" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/videoseries?si=rNZ2EiLL_EuGDZ6w&amp;list=PLHnm1_1RE0IeDbMohA3c0CpAc9wIvd2_9" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/14ZFh-SFIrU?si=neIqV4X-_KTbmWjc" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/bfNSoRD6IY8?si=2GaUPoWZxdAJNlxs" title="YouTube video player" allowfullscreen></iframe>
+    <div class="section">
+        <h2>client work ✦</h2>
+        <div class="video-container full-width-video">
+            <div class="video-thumb" data-id="d2ieE_A0sig">
+                <img src="https://img.youtube.com/vi/d2ieE_A0sig/hqdefault.jpg" alt="Video Thumbnail">
+                <button>▶</button>
             </div>
         </div>
 
-        <div class="section">
-            <h2>personal projects ☁︎</h2>
-            <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/BtTgIKe6oH4?si=9MMXIZ3bdpUcj3DF" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/Odq5tLtPDXk?si=WmFQSPbOF3XZ1-5I" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/kTOCtqsrNJg?si=YQKQL376g11m5TvD" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/Jpbkw4Jb3UE?si=akCH6s3u45P7wBfE" title="YouTube video player" allowfullscreen></iframe>
+        <br>
+
+        <div class="video-container">
+            <div class="video-thumb" data-id="XeSTwjLBc_k">
+                <img src="https://img.youtube.com/vi/XeSTwjLBc_k/hqdefault.jpg" alt="Video Thumbnail">
+                <button>▶</button>
+            </div>
+            <div class="video-thumb" data-id="SCnWPXLBtg4">
+                <img src="https://img.youtube.com/vi/SCnWPXLBtg4/hqdefault.jpg" alt="Video Thumbnail">
+                <button>▶</button>
+            </div>
+            <div class="video-thumb" data-id="cKSayjL4vqY">
+                <img src="https://img.youtube.com/vi/cKSayjL4vqY/hqdefault.jpg" alt="Video Thumbnail">
+                <button>▶</button>
+            </div>
+            <div class="video-thumb" data-id="14ZFh-SFIrU">
+                <img src="https://img.youtube.com/vi/14ZFh-SFIrU/hqdefault.jpg" alt="Video Thumbnail">
+                <button>▶</button>
             </div>
         </div>
-        <div class="section">
-            <h2>practice ♡</h2>
-            <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/jU_VXxyQY9s?si=vwTRUfO6_4SkraWG" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/fQbPsBAEP34?si=9NqoxPnjXpj5flb4" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/unV6iwVE0Q4?si=C97glqW6dp8pA4LJ" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/L_j-ZEHgNNw?si=9Srv3QGEEzuYYBgr" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/qAB60OnvsPk?si=0OyaXGQxhsgqYj5a" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/wZRUUuK1sow?si=TvJzWyQ9GyC4oZxa" title="YouTube video player" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/dmNck1R0pOY?si=KmjN9o7-mCYRn3iY" title="YouTube video player" allowfullscreen></iframe>
+        <div class="video-container">
+            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DA6Uk9DxKVs/?utm_source=ig_embed" data-instgrm-version="14"></blockquote>
+            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DBHFhiHRYL8/?utm_source=ig_embed" data-instgrm-version="14"></blockquote>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>personal projects ☁︎</h2>
+        <div class="video-container">
+            <div class="video-thumb" data-id="BtTgIKe6oH4">
+                <img src="https://img.youtube.com/vi/BtTgIKe6oH4/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+            </div>
+            <div class="video-thumb" data-id="Odq5tLtPDXk">
+                <img src="https://img.youtube.com/vi/Odq5tLtPDXk/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+            </div>
+            <div class="video-thumb" data-id="kTOCtqsrNJg">
+                <img src="https://img.youtube.com/vi/kTOCtqsrNJg/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+            </div>
+            <div class="video-thumb" data-id="Jpbkw4Jb3UE">
+                <img src="https://img.youtube.com/vi/Jpbkw4Jb3UE/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
             </div>
         </div>
     </div>
-    <script async src="//www.instagram.com/embed.js"></script>
+
+    <div class="section">
+        <h2>practice ♡</h2>
+        <div class="video-container">
+            <div class="video-thumb" data-id="jU_VXxyQY9s">
+                <img src="https://img.youtube.com/vi/jU_VXxyQY9s/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+            </div>
+            <div class="video-thumb" data-id="fQbPsBAEP34">
+                <img src="https://img.youtube.com/vi/fQbPsBAEP34/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+            </div>
+            <div class="video-thumb" data-id="unV6iwVE0Q4">
+                <img src="https://img.youtube.com/vi/unV6iwVE0Q4/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script defer src="//www.instagram.com/embed.js"></script>
+
+<script>
+document.querySelectorAll('.video-thumb').forEach(thumb => {
+    thumb.addEventListener('click', () => {
+        const id = thumb.dataset.id;
+        const iframe = document.createElement('iframe');
+        iframe.src = `https://www.youtube.com/embed/${id}?autoplay=1`;
+        iframe.allowFullscreen = true;
+        iframe.loading = 'lazy';
+        thumb.innerHTML = '';
+        thumb.appendChild(iframe);
+    });
+});
+</script>
+
 </body>
 </html>
