--- a/index.html
+++ b/index.html
@@ -138,57 +138,22 @@
     }
 
     @media screen and (max-width: 768px) {
-      body {
-        padding: 10px;
-      }
-
-      #container {
-        width: 100%;
-        padding: 15px;
-      }
-
-      .profile-spotlight {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .profile-section,
-      .spotlight-section {
-        width: 100%;
-        flex: none;
-      }
-
-      .social-media-ascii {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .social-media,
-      .ascii-art {
-        width: 100%;
-      }
-
-      .gallery-images {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .gallery img {
-        max-width: 100%;
-      }
-
-      iframe {
-        width: 100%;
-        aspect-ratio: 16 / 9;
-        height: auto;
-      }
+      body { padding: 10px; }
+      #container { width: 100%; padding: 15px; }
+      .profile-spotlight { flex-direction: column; align-items: center; }
+      .profile-section, .spotlight-section { width: 100%; flex: none; }
+      .social-media-ascii { flex-direction: column; align-items: center; }
+      .social-media, .ascii-art { width: 100%; }
+      .gallery-images { flex-direction: column; align-items: center; }
+      .gallery img { max-width: 100%; }
+      iframe { width: 100%; aspect-ratio: 16 / 9; height: auto; }
     }
   </style>
 </head>
 <body>
   <div id="container">
     <header>
-      <h1>ZOMBIES GO TO HEAVEN ⋆⭒˚.⋆</h1>
+      <h1>WASSIM DIFALLAH ⋆⭒˚.⋆</h1>
     </header>
 
     <div class="section profile-spotlight">
@@ -199,17 +164,18 @@
           <p>
             name: wassim <br>
             age: 19 <br><br>
-            hi! i'm wassim! i am a british/algerian visual artist and filmmaker :DD <br><br>
-            i make music videos, visualisers, and short films. also an amateur guitar player.
-            here u can find my full portfolio, along with some extra stuff like my socials :3
+            Hi! I'm wassim! I am a British/Algerian visual artist and filmmaker! <br><br>
+            I make music videos, visualisers, and short films. Also an amateur guitar player.
+            here u can find my full portfolio, along with some extra stuff like my social media :)
           </p>
         </div>
       </div>
 
       <div class="spotlight-section">
         <h2>most recent work :></h2>
-        <p>hey plz go check this out :D</p>
-        <iframe src="https://www.youtube.com/embed/SCnWPXLBtg4?si=hEX8ziKz9PvbW8f8" title="YouTube video player" allowfullscreen></iframe>
+        <p>hey please go check this out!</p>
+        <!-- YouTube embed loads immediately -->
+        <iframe src="https://www.youtube.com/embed/SCnWPXLBtg4?si=hEX8ziKz9PvbW8" title="YouTube video player" allowfullscreen></iframe>
       </div>
     </div>
 
@@ -221,7 +187,7 @@
         <a href="https://www.instagram.com/fishingentity/" target="_blank">instagram</a>
         <a href="https://www.tiktok.com/@fishingentity" target="_blank">tiktok</a>
         <br><a href="http://artistsagainstgenocide.org" target="_blank">FUNDRAISING DONATIONS</a>
-        <br><br>email: camden@friendlycritter.art
+        <br><br>email: wassim@friendlycritter.art
       </div>
 
       <div class="ascii-art">
