--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@ body {
     opacity: 0;
     animation: fadeIn 0.3s forwards;
 }
+
 @keyframes fadeIn { to { opacity: 1; } }
 
 #container {
@@ -35,7 +36,6 @@ body {
     border: 2px solid #000;
     padding: 20px;
     box-sizing: border-box;
-    overflow-y: visible;
     margin: 40px 0;
 }
 
@@ -67,11 +67,14 @@ header {
     cursor: pointer;
     background: #000;
     flex: 1 1 calc(50% - 20px);
+    aspect-ratio: 16 / 9;
+    overflow: hidden;
 }
 
 .video-thumb img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
     display: block;
 }
 
@@ -89,7 +92,16 @@ header {
     cursor: pointer;
 }
 
-.full-width-video .video-thumb {
+.video-thumb iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+.instagram-embed {
     flex: 1 1 100%;
 }
 
@@ -103,6 +115,7 @@ header {
 </style>
 </head>
 <body>
+
 <div id="container">
     <header><h1>PORTFOLIO ✩♬₊˚.</h1></header>
 
@@ -135,9 +148,10 @@ header {
                 <button>▶</button>
             </div>
         </div>
+
         <div class="video-container">
-            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DA6Uk9DxKVs/?utm_source=ig_embed" data-instgrm-version="14"></blockquote>
-            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DBHFhiHRYL8/?utm_source=ig_embed" data-instgrm-version="14"></blockquote>
+            <div class="instagram-embed" data-url="https://www.instagram.com/reel/DA6Uk9DxKVs/?utm_source=ig_embed"></div>
+            <div class="instagram-embed" data-url="https://www.instagram.com/reel/DBHFhiHRYL8/?utm_source=ig_embed"></div>
         </div>
     </div>
 
@@ -188,6 +202,19 @@ document.querySelectorAll('.video-thumb').forEach(thumb => {
         thumb.appendChild(iframe);
     });
 });
+
+document.querySelectorAll('.instagram-embed').forEach(div => {
+    const url = div.dataset.url;
+    const blockquote = document.createElement('blockquote');
+    blockquote.className = 'instagram-media';
+    blockquote.dataset.instgrmVersion = '14';
+    blockquote.dataset.instgrmPermalink = url;
+    div.appendChild(blockquote);
+});
+
+if(window.instgrm) {
+    window.instgrm.Embeds.process();
+}
 </script>
 
 </body>
