--- a/portfolio.html
+++ b/portfolio.html
@@ -194,6 +194,12 @@ header {
             <div class="video-thumb" data-id="unV6iwVE0Q4">
                 <img src="https://img.youtube.com/vi/unV6iwVE0Q4/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
             </div>
+            <div class="video-thumb" data-id="dmNck1R0pOY">
+                <img src="https://img.youtube.com/vi/dmNck1R0pOY/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+            </div>
+            <div class="video-thumb" data-id="wZRUUuK1sow">
+                <img src="https://img.youtube.com/vi/wZRUUuK1sow/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+            </div>
         </div>
     </div>
 </div>
