--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
       <div class="ascii-art">
         <p>૮˶• ﻌ •˶ა<br>./づ~ ♡</p>
-        <a href="portfolio.html"><b>PORTFOLIO</b></a>
+        <a href="portfolio/"><b>PORTFOLIO</b></a>
       </div>
     </div>
 
