--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,7 @@
 <link rel="icon" type="image/webp" href="images/3336a903610f1b29cd14aa89afc0f9cc.webp">
 <title>Portfolio</title>
 
+<link rel="icon" type="image/jpg" href="images/3336a903610f1b29cd14aa89afc0f9cc.jpg">
 <link rel="preconnect" href="https://www.youtube.com">
 <link rel="preconnect" href="https://i.ytimg.com">
 <link rel="preconnect" href="https://www.instagram.com">
