--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <p>
             name: wassim <br>
             age: 19 <br><br>
-            Hi! I'm wassim! I am a British/Algerian visual artist and filmmaker! <br><br>
+            Hi! I'm Wassim! I am a British/Algerian visual artist and filmmaker. <br><br>
             I make music videos, visualisers, and short films. Also an amateur guitar player.
             here u can find my full portfolio, along with some extra stuff like my social media :)
           </p>
@@ -183,8 +183,8 @@
       <div class="social-media">
         <h2>socials ʚɞ ⁺˖ ⸝⸝</h2>
         <a href="https://www.youtube.com/@wpssim" target="_blank">youtube</a>
-        <a href="https://x.com/wpssim" target="_blank">twitter</a>
-        <a href="https://www.instagram.com/fishingentity/" target="_blank">instagram</a>
+        <a href="https://x.com/fishingentity" target="_blank">twitter</a>
+        <a href="https://www.instagram.com/wpssim/" target="_blank">instagram</a>
         <a href="https://www.tiktok.com/@fishingentity" target="_blank">tiktok</a>
         <br><a href="http://artistsagainstgenocide.org" target="_blank">FUNDRAISING DONATIONS</a>
         <br><br>email: wassim@friendlycritter.art
