--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <div class="section profile-spotlight">
       <div class="profile-section">
-        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcR4GjS7WjWAYcopPYB61uaV9-VJkCoy8wwIbDfzxGUcT7Gk9QiG" alt="Profile Picture" class="profile-pic">
+        <img src="images/wassim.webp" alt="me!" class="profile-pic">
         <div class="profile-info">
           <h2>about me ૮ - ﻌ • ა</h2>
           <p>
