--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -27,7 +27,6 @@ body {
     opacity: 0;
     animation: fadeIn 0.3s forwards;
 }
-
 @keyframes fadeIn { to { opacity: 1; } }
 
 #container {
@@ -39,7 +38,6 @@ body {
     box-sizing: border-box;
     margin: 40px 0;
 }
-
 header {
     text-align: center;
     background-color: #7b9bd2;
@@ -77,6 +75,7 @@ header {
     height: 100%;
     object-fit: cover;
     display: block;
+    transition: opacity 0.3s ease;
 }
 
 .video-thumb button {
@@ -100,6 +99,7 @@ header {
     width: 100%;
     height: 100%;
     border: none;
+    display: block;
 }
 
 .instagram-embed {
@@ -209,27 +209,37 @@ header {
 
 <script>
 document.querySelectorAll('.video-thumb').forEach(thumb => {
-    thumb.addEventListener('click', () => {
-        const id = thumb.dataset.id;
-        const iframe = document.createElement('iframe');
-        iframe.src = `https://www.youtube.com/embed/${id}?autoplay=1`;
-        iframe.allowFullscreen = true;
-        thumb.innerHTML = '';
-        thumb.appendChild(iframe);
-    });
+  thumb.addEventListener('click', () => {
+    const id = thumb.dataset.id;
+    const iframe = document.createElement('iframe');
+    iframe.src = `https://www.youtube.com/embed/${id}?autoplay=1`;
+    iframe.allowFullscreen = true;
+    iframe.setAttribute('allow', 'autoplay; encrypted-media');
+    iframe.style.position = 'absolute';
+    iframe.style.top = 0;
+    iframe.style.left = 0;
+    iframe.style.width = '100%';
+    iframe.style.height = '100%';
+
+    const img = thumb.querySelector('img');
+    if (img) img.style.opacity = '0';
+
+    thumb.querySelector('button')?.remove();
+    thumb.appendChild(iframe);
+  });
 });
 
 document.querySelectorAll('.instagram-embed').forEach(div => {
-    const url = div.dataset.url;
-    const blockquote = document.createElement('blockquote');
-    blockquote.className = 'instagram-media';
-    blockquote.dataset.instgrmVersion = '14';
-    blockquote.dataset.instgrmPermalink = url;
-    div.appendChild(blockquote);
+  const url = div.dataset.url;
+  const blockquote = document.createElement('blockquote');
+  blockquote.className = 'instagram-media';
+  blockquote.dataset.instgrmVersion = '14';
+  blockquote.dataset.instgrmPermalink = url;
+  div.appendChild(blockquote);
 });
 
-if(window.instgrm) {
-    window.instgrm.Embeds.process();
+if (window.instgrm) {
+  window.instgrm.Embeds.process();
 }
 </script>
 
