--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
           <p>
             name: wassim <br>
             age: 19 <br><br>
-            Hi! I'm Wassim! I am a British/Algerian visual artist and filmmaker. <br><br>
-            I make music videos, visualisers, and short films. Also an amateur guitar player.
+            Hi! I'm Wassim. I am a British/Algerian VFX artist and graphic designer. <br><br>
+            I make music videos, visualisers, cover arts, and short films. Also an amateur guitar player.
             here u can find my full portfolio, along with some extra stuff like my social media :)
           </p>
         </div>
