--- a/index.html
+++ b/index.html
@@ -197,7 +197,9 @@
     </div>
 
     <div class="section gallery">
-      <h2>gallery 𖤐⭒⋆｡⋆⭒𖤐</h2>
+      <h2>Gallery 𖤐⭒⋆｡⋆⭒𖤐</h2>
+      <br>
+      <body> Some of these will hyperlink to their corresponding song/albums! </body>
       
       <div class="gallery-images">
         <img src="images/aldn.png" alt="aldn">
