--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <div class="social-media">
         <h2>socials ʚɞ ⁺˖ ⸝⸝</h2>
         <a href="https://www.youtube.com/@wpssim" target="_blank">youtube</a>
-        <a href="https://x.com/fishingentity" target="_blank">twitter</a>
+        <a href="https://www.linkedin.com/in/wassim-difallah-364477384/" target="_blank">linkedin</a>
         <a href="https://www.instagram.com/wpssim/" target="_blank">instagram</a>
         <a href="https://www.tiktok.com/@fishingentity" target="_blank">tiktok</a>
         <br><a href="http://artistsagainstgenocide.org" target="_blank">FUNDRAISING DONATIONS</a>
