--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
       
       <div class="gallery-images">
         <img src="images/aldn.png" alt="aldn">
-        <img src="images/2muchpressure.png" alt="julia wolf - 2muchpressure">
+        <a href="https://open.spotify.com/album/4bSBCoiEBbuZjwmopMVXXw?si=B1MC72DqQHy5sVomx1xQ2Q" target="_blank">
+          <img src="images/2muchpressure.png" alt="julia wolf - 2muchpressure">
+        </a>
         <img src="images/ericdoa.png" alt="ericdoa">
       </div>
       <div class="gallery-images">
@@ -228,13 +230,17 @@
         <img src="images/ray.jpg" alt="ray">
       </div>
       <div class="gallery-images">
-        <img src="images/lost.jpg" alt="lost and found">
+        <a href="https://open.spotify.com/track/7mLXm7OLtbCLgnAaM56Wi2?si=874fbb2d7312464b" target="_blank">
+          <img src="images/lost.jpg" alt="lost and found">
+        </a>
         <img src="images/cybertrash.png" alt="cybertrash">
         <img src="images/kmoe.png" alt="kmoe">
       </div>
       <div class="gallery-images">
         <img src="images/post.png" alt="poster girl">
-        <img src="images/hearteater.png" alt="hearteater">
+        <a href="https://open.spotify.com/track/5luvCIjlGAU2ugU760D8dF?si=ac8e26b548af45e2" target="_blank">
+          <img src="images/hearteater.png" alt="hearteater">
+        </a>
         <img src="images/glaive2.png" alt="glaive">
       </div>
       <div class="gallery-images">
