--- a/index.html
+++ b/index.html
@@ -115,21 +115,38 @@
       box-sizing: border-box;
     }
 
+    .gallery p {
+      margin-top: 0;
+      font-style: italic;
+    }
+
     .gallery-images {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 10px;
       flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
       margin-bottom: 10px;
     }
 
-    .gallery img {
+    .gallery-images a,
+    .gallery-images img {
+      flex: 1 1 calc(33.333% - 10px);
+      box-sizing: border-box;
+      display: inline-block;
+      border: 2px solid #000;
+      transition: transform 0.2s ease-in-out;
+    }
+
+    .gallery-images a img,
+    .gallery-images img {
       width: 100%;
       height: auto;
-      max-width: 32%;
-      border: 2px solid #000;
-      box-sizing: border-box;
+      display: block;
+    }
+
+    .gallery-images a:hover img,
+    .gallery-images img:hover {
+      transform: scale(1.03);
     }
 
     footer {
@@ -145,11 +162,12 @@
       .social-media-ascii { flex-direction: column; align-items: center; }
       .social-media, .ascii-art { width: 100%; }
       .gallery-images { flex-direction: column; align-items: center; }
-      .gallery img { max-width: 100%; }
+      .gallery-images a, .gallery-images img { flex: none; width: 100%; }
       iframe { width: 100%; aspect-ratio: 16 / 9; height: auto; }
     }
   </style>
 </head>
+
 <body>
   <div id="container">
     <header>
@@ -172,7 +190,6 @@
       <div class="spotlight-section">
         <h2>most recent work :></h2>
         <p>hey please go check this out!</p>
-        <!-- YouTube embed loads immediately -->
         <iframe src="https://www.youtube.com/embed/SCnWPXLBtg4?si=hEX8ziKz9PvbW8" title="YouTube video player" allowfullscreen></iframe>
       </div>
     </div>
@@ -196,10 +213,8 @@
 
     <div class="section gallery">
       <h2>Gallery 𖤐⭒⋆｡⋆⭒𖤐</h2>
-      <body> Some of these will hyperlink to their corresponding song/albums! </body>
-      <br>
-      <br>
-      
+      <p>Some of these will hyperlink to their corresponding song/albums!</p>
+
       <div class="gallery-images">
         <img src="images/aldn.png" alt="aldn">
         <a href="https://open.spotify.com/album/4bSBCoiEBbuZjwmopMVXXw?si=B1MC72DqQHy5sVomx1xQ2Q" target="_blank">
@@ -207,26 +222,31 @@
         </a>
         <img src="images/ericdoa.png" alt="ericdoa">
       </div>
+
       <div class="gallery-images">
         <img src="images/zombiesgotoheaven.jpg" alt="Zombies Go to Heaven">
         <img src="images/linoleum.jpg" alt="Linoleum">
         <img src="images/to see the next part of the dream.jpg" alt="To See the Next Part of the Dream">
       </div>
+
       <div class="gallery-images">
         <img src="images/syzy.jpg" alt="Syzy">
         <img src="images/angelus.jpg" alt="Angelus">
         <img src="images/gl0wrm.jpg" alt="gl0wrm">
       </div>
+
       <div class="gallery-images">
         <img src="images/adam.jpg" alt="adam">
         <img src="images/tyler.png" alt="tyler">
         <img src="images/catgif.jpg" alt="catgif">
       </div>
+
       <div class="gallery-images">
         <img src="images/xaybee.jpg" alt="xaybee">
         <img src="images/zjay.jpg" alt="zjay">
         <img src="images/ray.jpg" alt="ray">
       </div>
+
       <div class="gallery-images">
         <a href="https://open.spotify.com/track/7mLXm7OLtbCLgnAaM56Wi2?si=874fbb2d7312464b" target="_blank">
           <img src="images/lost.jpg" alt="lost and found">
@@ -234,6 +254,7 @@
         <img src="images/cybertrash.png" alt="cybertrash">
         <img src="images/kmoe.png" alt="kmoe">
       </div>
+
       <div class="gallery-images">
         <img src="images/post.png" alt="poster girl">
         <a href="https://open.spotify.com/track/5luvCIjlGAU2ugU760D8dF?si=ac8e26b548af45e2" target="_blank">
@@ -241,6 +262,7 @@
         </a>
         <img src="images/glaive2.png" alt="glaive">
       </div>
+
       <div class="gallery-images">
         <img src="images/delta.png" alt="delta">
         <img src="images/megatron.png" alt="megatron">
